Fixed a bug with a horizontal scrollbar

--- a/docs/template/public/kss.less
+++ b/docs/template/public/kss.less
@@ -1380,7 +1380,7 @@ header.hyHomeHeaderMinor {
         .personaScreen{
             margin-bottom: 20px;
         }
-        .hyPersonaTabs .container{
+        .hyPersonaTabs .container-fluid{
             max-width: 555px;
             padding-left:0;
             .hyPersonaTab{
